objects/EUR_CRM_Route_Template__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_Template_Assigned_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_Event_Record__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_LT&apos;) , &apos;EUR_LT_Direct_Account_Visit_Event&apos;, 
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_LV&apos;) , &apos;&apos;,  
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_EE&apos;), &apos;EUR_EE_Direct_Account_Visit_Event&apos;, 
&apos;&apos;
) ) )</formula>
        <label>External Event Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Other_Visits_View_Option__c</fullName>
        <formula>IF(OR(UPPER(EUR_CRM_Country_Code__c)=&apos;E1&apos;, UPPER(EUR_CRM_Country_Code__c)=&apos;DE&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Other Visits View Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Template_Clean_Out__c</fullName>
        <formula>IF(CONTAINS(EUR_CRM_Country_Code__c , &apos;JB&apos;) , true,  
IF(CONTAINS(EUR_CRM_Country_Code__c , &apos;GB&apos;), true,  
true) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Template Clean Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_View_More__c</fullName>
        <formula>IF(OR(CONTAINS(RecordType.DeveloperName, &apos;EUR_JB&apos;), 
      CONTAINS(RecordType.DeveloperName, &apos;EUR_GB&apos;),
      CONTAINS(RecordType.DeveloperName, &apos;EUR_AT&apos;),
      CONTAINS(RecordType.DeveloperName, &apos;EUR_DE&apos;)),
false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has View More</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_All_Day_Event__c</fullName>
        <formula>IF(UPPER(EUR_CRM_Country_Code__c) = &apos;AT&apos;, true, 
IF(UPPER(EUR_CRM_Country_Code__c) = &apos;DE&apos;, true, 
IF(UPPER(EUR_CRM_Country_Code__c) = &apos;E1&apos;, true,
IF(UPPER(EUR_CRM_Country_Code__c) = &apos;FI&apos;, true, 
false) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is All Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Batch_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator flag if there is a running batch process for the route planning record</description>
        <label>Is Batch Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Last_Date_Populated__c</fullName>
        <label>Last Date Populated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Max_Planning_Period_Week__c</fullName>
        <label>Max Planning Period (Week)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Max_Visit_Duration_Hour__c</fullName>
        <label>Max Visit Duration Hour</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Other_Visits_Viewable__c</fullName>
        <description>Enables viewing of other route template visits on setting an account visit.</description>
        <formula>IF(UPPER(EUR_CRM_Country_Code__c) = &apos;JB&apos; , true,  
IF(UPPER(EUR_CRM_Country_Code__c) = &apos;GB&apos; , true, 
IF(AND(OR(UPPER(EUR_CRM_Country_Code__c) = &apos;DE&apos;, UPPER(EUR_CRM_Country_Code__c) = &apos;E1&apos;), EUR_CRM_View_Other_Visits__c), true, 

false) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Visits Viewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Planning_Period__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Route Template Planning Period</description>
        <label>Planning Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Population_Reminder_Date_Time__c</fullName>
        <description>Stores latest created ReminderDateTime of population reminder Task, populated by Task trigger

For all affiliates</description>
        <label>Population Reminder Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Reminder_Day__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Remind user to repopulate template in X day/s prior to last scheduled event for the template</description>
        <label>Reminder Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Reset_Week__c</fullName>
        <label>Reset to Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Route_Template_Name__c</fullName>
        <label>Route Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Self_Assigned__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field, if checked, indicates that the Route Template is assigned to the person who has created the Template.
Help Text</description>
        <label>Self Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Template_Event_Record_Type__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_LT&apos;), &apos;EUR_LT_Visitation_Event&apos;, 
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_LV&apos;), &apos;EUR_LV_Visitation_Event&apos;,  
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_EE&apos;), &apos;EUR_EE_Visitation_Event&apos;, 
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_JB&apos;), &apos;EUR_JB_Visitation_Event&apos;, 
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_GB&apos;), &apos;EUR_GB_Visitation_Event&apos;, 
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_AT&apos;), &apos;EUR_AT_Visitation_Event&apos;, 
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_FI&apos;), &apos;EUR_FI_Visitation_Event&apos;, 
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_DE&apos;), &apos;EUR_DE_Visitation_Event&apos;, 
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_KE&apos;), &apos;EUR_KE_Visitation_Event&apos;, 
IF(CONTAINS(RecordType.DeveloperName, &apos;EUR_AO&apos;), &apos;EUR_AO_Visitation_Event&apos;, 
&apos;&apos;) 
) ) ) ) ) ))))</formula>
        <label>Template Event Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_View_Other_Visits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check box to manipulate viewing of existing visits when adding a new one on route template builder

For the following affiliates:
1. Germany (DE)
2. SFA Lite (E1)</description>
        <label>View Other Visits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Duration__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Visit Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Route Template (EU)</label>
    <listViews>
        <fullName>All_DK_Route_Templates</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Planning_Period__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Route_Template__c.EUR_DK_Route_Template</value>
        </filters>
        <label>All DK Route Templates</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_FI_Route_Templates</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Planning_Period__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Route_Template__c.EUR_FI_Route_Template</value>
        </filters>
        <label>All FI Route Templates</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KE_Route_Planning1</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Max_Planning_Period_Week__c</columns>
        <columns>EUR_CRM_Reminder_Day__c</columns>
        <columns>EUR_CRM_Route_Template_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Route_Template__c.EUR_KE_Route_Template</value>
        </filters>
        <label>All KE Route Planning</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_NG_Route_Planning</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Max_Planning_Period_Week__c</columns>
        <columns>EUR_CRM_Planning_Period__c</columns>
        <columns>EUR_CRM_Reminder_Day__c</columns>
        <columns>EUR_CRM_Reset_Week__c</columns>
        <columns>EUR_CRM_Route_Template_Name__c</columns>
        <columns>EUR_CRM_Scheduled__c</columns>
        <columns>EUR_CRM_Visit_Duration__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Route_Template__c.EUR_NG_Route_Template</value>
        </filters>
        <label>All NG Route Planning</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_PT_All_Route_Template_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Planning_Period__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Route_Template__c.EUR_PT_Route_Template</value>
        </filters>
        <label>EUR PT All Route Template View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Route_Templates</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Route_Template_Name__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Route_Template__c.EUR_ZA_Route_Template</value>
        </filters>
        <label>All ZA Route Templates</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RT-{0000000000}</displayFormat>
        <label>Route Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Template (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Route_Template</fullName>
        <active>true</active>
        <label>EUR AO Route Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Route_Template</fullName>
        <active>true</active>
        <description>Route Template - Austria</description>
        <label>EUR_AT_Route_Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Route_Template</fullName>
        <active>true</active>
        <description>Route Template - Germany</description>
        <label>EUR_DE_Route_Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Route_Template</fullName>
        <active>true</active>
        <description>Record Type for DK Route Template</description>
        <label>EUR DK Route Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Route_Template</fullName>
        <active>true</active>
        <label>EUR_EE_Route_Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Route_Template</fullName>
        <active>true</active>
        <label>EUR FI Route Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Route_Template</fullName>
        <active>true</active>
        <description>For UK</description>
        <label>EUR_GB_Route_Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_JB_Route_Template</fullName>
        <active>true</active>
        <label>JB Route Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Route_Template</fullName>
        <active>true</active>
        <label>EUR KE Route Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Route_Template</fullName>
        <active>true</active>
        <label>EUR_LT_Route_Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Route_Template</fullName>
        <active>true</active>
        <label>EUR_LV_Route_Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Route_Template</fullName>
        <active>true</active>
        <description>Route Template - Nigeria</description>
        <label>EUR NG Route Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Route_Template</fullName>
        <active>true</active>
        <label>EUR PT Route Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Route_Template</fullName>
        <active>true</active>
        <label>EUR ZA Route Template</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EUR_Check_Assigned_To_Field_Not_Blank</fullName>
        <active>true</active>
        <description>This rule is used to check that if  &apos;Self Assigned&apos; field is false then &apos;Assigned To&apos; field should have a value</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;EUR PT Route Template&quot;, 
EUR_CRM_Self_Assigned__c = False,
ISBLANK( EUR_CRM_Assigned_To__c ) 
)</errorConditionFormula>
        <errorMessage>Please input value for the &apos;Assigned To&apos; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUR_Check_BothAssignFields_NOT_Populated</fullName>
        <active>true</active>
        <description>This rule checks that the &apos;Self Assigned&apos; and &apos;Assigned To&apos; fields are not populated simultaneously</description>
        <errorConditionFormula>AND( 
RecordType.Name =&quot;EUR PT Route Template&quot;, 
EUR_CRM_Self_Assigned__c = TRUE, 
NOT(ISBLANK(EUR_CRM_Assigned_To__c)) 
)</errorConditionFormula>
        <errorMessage>The fields &apos;Self Assigned&apos; and &apos;Assigned To&apos; cannot be populated simultaneously</errorMessage>
    </validationRules>
</CustomObject>